--- a/random_string_generator.css
+++ b/random_string_generator.css
@@ -1,32 +1,17 @@
-@charset "UTF-8";
-
-* {
-}
-
 a {
+	color: blue;
 	text-decoration:		none;
 }
 
 a:hover,
 a:active {
+	color: red;
 	text-decoration:		underline;
 }
 
 label:after {
 	white-space:			pre;
 	content:				"\A";
-}
-
-label:hover {
-	cursor:					pointer;
-	color:					#003399;
-	background-color:		#f3f9ff;
-}
-
-fieldset:disabled label:hover {
-	cursor:					auto;
-	color:					inherit;
-	background-color:		transparent;
 }
 
 fieldset:disabled {
